--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Suggests: 
+    digest,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
